{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 28,
  "lineage": "5e2133c3-1c4b-e350-4c22-81c77fbd892b",
  "resources": [
    {
      "module": "module.backend",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:211125554315:loadbalancer/app/cloud-project-backend-alb/01f64eeedfc36f27",
            "arn_suffix": "app/cloud-project-backend-alb/01f64eeedfc36f27",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "cloud-project-backend-alb-1827231138.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:211125554315:loadbalancer/app/cloud-project-backend-alb/01f64eeedfc36f27",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "cloud-project-backend-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0db06459e117b42ff"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0bfe6de0c7d6c150d"
              },
              {
                "subnet_id": "subnet-0d164cf166fe56d64"
              }
            ],
            "subnets": [
              "subnet-0bfe6de0c7d6c150d",
              "subnet-0d164cf166fe56d64"
            ],
            "tags": {
              "Name": "cloud-project-backend-alb",
              "Project": "cloud-project"
            },
            "tags_all": {
              "Name": "cloud-project-backend-alb",
              "Project": "cloud-project"
            },
            "vpc_id": "vpc-0907dff8501113608",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:211125554315:loadbalancer/app/cloud-project-backend-alb/01f64eeedfc36f27"
          },
          "dependencies": [
            "module.network.aws_subnet.public_a",
            "module.network.aws_subnet.public_b",
            "module.network.aws_vpc.main",
            "module.security.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.backend",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:211125554315:listener/app/cloud-project-backend-alb/01f64eeedfc36f27/2f6f35a3f35996e6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:211125554315:targetgroup/cloud-project-backend-tg/f732abcad078a446",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:211125554315:listener/app/cloud-project-backend-alb/01f64eeedfc36f27/2f6f35a3f35996e6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:211125554315:loadbalancer/app/cloud-project-backend-alb/01f64eeedfc36f27",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Name": "cloud-project-alb-http-listener",
              "Project": "cloud-project"
            },
            "tags_all": {
              "Name": "cloud-project-alb-http-listener",
              "Project": "cloud-project"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:211125554315:listener/app/cloud-project-backend-alb/01f64eeedfc36f27/2f6f35a3f35996e6"
          },
          "dependencies": [
            "module.backend.aws_lb.alb",
            "module.backend.aws_lb_target_group.tg",
            "module.network.aws_subnet.public_a",
            "module.network.aws_subnet.public_b",
            "module.network.aws_vpc.main",
            "module.security.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.backend",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:211125554315:targetgroup/cloud-project-backend-tg/f732abcad078a446",
            "arn_suffix": "targetgroup/cloud-project-backend-tg/f732abcad078a446",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:211125554315:targetgroup/cloud-project-backend-tg/f732abcad078a446",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cloud-project-backend-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "cloud-project-backend-tg",
              "Project": "cloud-project"
            },
            "tags_all": {
              "Name": "cloud-project-backend-tg",
              "Project": "cloud-project"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0907dff8501113608"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:211125554315:targetgroup/cloud-project-backend-tg/f732abcad078a446"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.frontend",
      "mode": "managed",
      "type": "aws_instance",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-009d9173b44d0482b",
            "arn": "arn:aws:ec2:us-east-1:211125554315:instance/i-02b33bbe257bb6bd1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02b33bbe257bb6bd1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-06a40b4e8a2c22003"
              }
            ],
            "primary_network_interface_id": "eni-06a40b4e8a2c22003",
            "private_dns": "ip-10-0-1-68.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.68",
            "public_dns": "ec2-54-221-173-18.compute-1.amazonaws.com",
            "public_ip": "54.221.173.18",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d7dce65bbe446d56",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bfe6de0c7d6c150d",
            "tags": {
              "Name": "cloud-project-frontend-ec2",
              "Project": "cloud-project"
            },
            "tags_all": {
              "Name": "cloud-project-frontend-ec2",
              "Project": "cloud-project"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cd2aa2270a88589e"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "211125554315",
            "id": "i-02b33bbe257bb6bd1",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_ami.ubuntu_2404",
            "module.backend.aws_lb.alb",
            "module.network.aws_subnet.public_a",
            "module.network.aws_subnet.public_b",
            "module.network.aws_vpc.main",
            "module.security.aws_security_group.alb_sg",
            "module.security.aws_security_group.frontend_sg",
            "module.security.data.http.my_public_ip"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01960a9d2c380c9bf",
            "arn": "arn:aws:ec2:us-east-1:211125554315:elastic-ip/eipalloc-01960a9d2c380c9bf",
            "domain": "vpc",
            "id": "eipalloc-01960a9d2c380c9bf",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-98-90-74-233.compute-1.amazonaws.com",
            "public_ip": "98.90.74.233",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "cloud-project-nat-eip",
              "Project": "cloud-project"
            },
            "tags_all": {
              "Name": "cloud-project-nat-eip",
              "Project": "cloud-project"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125554315:internet-gateway/igw-0284abda692010093",
            "id": "igw-0284abda692010093",
            "owner_id": "211125554315",
            "region": "us-east-1",
            "tags": {
              "Name": "cloud-project-igw",
              "Project": "cloud-project"
            },
            "tags_all": {
              "Name": "cloud-project-igw",
              "Project": "cloud-project"
            },
            "vpc_id": "vpc-0907dff8501113608"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01960a9d2c380c9bf",
            "association_id": "eipassoc-07bf8f5ba0150c59a",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0a6cb5a818d53f0c5",
            "network_interface_id": "eni-09a0bc12571d9b036",
            "private_ip": "10.0.1.173",
            "public_ip": "98.90.74.233",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0bfe6de0c7d6c150d",
            "tags": {
              "Name": "cloud-project-nat-gateway",
              "Project": "cloud-project"
            },
            "tags_all": {
              "Name": "cloud-project-nat-gateway",
              "Project": "cloud-project"
            },
            "vpc_id": "vpc-0907dff8501113608"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "211125554315",
            "id": "nat-0a6cb5a818d53f0c5",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_subnet.public_a",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125554315:route-table/rtb-0dd9d49345bb5eeb0",
            "id": "rtb-0dd9d49345bb5eeb0",
            "owner_id": "211125554315",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a6cb5a818d53f0c5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloud-project-private-rt",
              "Project": "cloud-project"
            },
            "tags_all": {
              "Name": "cloud-project-private-rt",
              "Project": "cloud-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0907dff8501113608"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "211125554315",
            "id": "rtb-0dd9d49345bb5eeb0",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_subnet.public_a",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125554315:route-table/rtb-00979555d904b2cc5",
            "id": "rtb-00979555d904b2cc5",
            "owner_id": "211125554315",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0284abda692010093",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloud-project-public-rt",
              "Project": "cloud-project"
            },
            "tags_all": {
              "Name": "cloud-project-public-rt",
              "Project": "cloud-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0907dff8501113608"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "211125554315",
            "id": "rtb-00979555d904b2cc5",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.main",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-063685257f698b3f7",
            "region": "us-east-1",
            "route_table_id": "rtb-0dd9d49345bb5eeb0",
            "subnet_id": "subnet-05eb83c9b7b4f1109"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "211125554315",
            "id": "rtbassoc-063685257f698b3f7",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private_a",
            "module.network.aws_subnet.public_a",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a1a53b82ccad265",
            "region": "us-east-1",
            "route_table_id": "rtb-0dd9d49345bb5eeb0",
            "subnet_id": "subnet-04b3204777148070f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "211125554315",
            "id": "rtbassoc-07a1a53b82ccad265",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private_b",
            "module.network.aws_subnet.public_a",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e7297e4df7196726",
            "region": "us-east-1",
            "route_table_id": "rtb-00979555d904b2cc5",
            "subnet_id": "subnet-0bfe6de0c7d6c150d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "211125554315",
            "id": "rtbassoc-0e7297e4df7196726",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.main",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public_a",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e340b69d9f9b5021",
            "region": "us-east-1",
            "route_table_id": "rtb-00979555d904b2cc5",
            "subnet_id": "subnet-0d164cf166fe56d64"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "211125554315",
            "id": "rtbassoc-0e340b69d9f9b5021",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.main",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public_b",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125554315:subnet/subnet-05eb83c9b7b4f1109",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05eb83c9b7b4f1109",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125554315",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "cloud-project-private-a",
              "Project": "cloud-project"
            },
            "tags_all": {
              "Name": "cloud-project-private-a",
              "Project": "cloud-project"
            },
            "vpc_id": "vpc-0907dff8501113608"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "211125554315",
            "id": "subnet-05eb83c9b7b4f1109",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125554315:subnet/subnet-04b3204777148070f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b3204777148070f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125554315",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "cloud-project-private-b",
              "Project": "cloud-project"
            },
            "tags_all": {
              "Name": "cloud-project-private-b",
              "Project": "cloud-project"
            },
            "vpc_id": "vpc-0907dff8501113608"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "211125554315",
            "id": "subnet-04b3204777148070f",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125554315:subnet/subnet-0bfe6de0c7d6c150d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bfe6de0c7d6c150d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "211125554315",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "cloud-project-public-a",
              "Project": "cloud-project"
            },
            "tags_all": {
              "Name": "cloud-project-public-a",
              "Project": "cloud-project"
            },
            "vpc_id": "vpc-0907dff8501113608"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "211125554315",
            "id": "subnet-0bfe6de0c7d6c150d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125554315:subnet/subnet-0d164cf166fe56d64",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d164cf166fe56d64",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "211125554315",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "cloud-project-public-b",
              "Project": "cloud-project"
            },
            "tags_all": {
              "Name": "cloud-project-public-b",
              "Project": "cloud-project"
            },
            "vpc_id": "vpc-0907dff8501113608"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "211125554315",
            "id": "subnet-0d164cf166fe56d64",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125554315:vpc/vpc-0907dff8501113608",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-076c30a3ec8290c91",
            "default_route_table_id": "rtb-0f645c1a3a5682956",
            "default_security_group_id": "sg-0877808fa3931a22f",
            "dhcp_options_id": "dopt-05a9ab255e62bd971",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0907dff8501113608",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f645c1a3a5682956",
            "owner_id": "211125554315",
            "region": "us-east-1",
            "tags": {
              "Name": "cloud-project-vpc",
              "Project": "cloud-project"
            },
            "tags_all": {
              "Name": "cloud-project-vpc",
              "Project": "cloud-project"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "211125554315",
            "id": "vpc-0907dff8501113608",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125554315:security-group/sg-0db06459e117b42ff",
            "description": "Allow inbound HTTP from internet to ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0db06459e117b42ff",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "cloud-project-alb-sg",
            "name_prefix": "",
            "owner_id": "211125554315",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cloud-project-alb-sg",
              "Project": "cloud-project"
            },
            "tags_all": {
              "Name": "cloud-project-alb-sg",
              "Project": "cloud-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0907dff8501113608"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "211125554315",
            "id": "sg-0db06459e117b42ff",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125554315:security-group/sg-03cf43e48ef947262",
            "description": "Allow backend app traffic from ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03cf43e48ef947262",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Backend app traffic from ALB",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0db06459e117b42ff"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "cloud-project-backend-sg",
            "name_prefix": "",
            "owner_id": "211125554315",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cloud-project-backend-sg",
              "Project": "cloud-project"
            },
            "tags_all": {
              "Name": "cloud-project-backend-sg",
              "Project": "cloud-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0907dff8501113608"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "211125554315",
            "id": "sg-03cf43e48ef947262",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.security.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125554315:security-group/sg-0cd2aa2270a88589e",
            "description": "Allow HTTP and SSH from internet to frontend",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cd2aa2270a88589e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "197.25.153.212/32"
                ],
                "description": "SSH from internet for debugging",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "cloud-project-frontend-sg",
            "name_prefix": "",
            "owner_id": "211125554315",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cloud-project-frontend-sg",
              "Project": "cloud-project"
            },
            "tags_all": {
              "Name": "cloud-project-frontend-sg",
              "Project": "cloud-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0907dff8501113608"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "211125554315",
            "id": "sg-0cd2aa2270a88589e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.security.data.http.my_public_ip"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125554315:security-group/sg-0df729f02f85dee78",
            "description": "Allow PostgreSQL traffic from backend only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0df729f02f85dee78",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from backend",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03cf43e48ef947262"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "cloud-project-rds-sg",
            "name_prefix": "",
            "owner_id": "211125554315",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cloud-project-rds-sg",
              "Project": "cloud-project"
            },
            "tags_all": {
              "Name": "cloud-project-rds-sg",
              "Project": "cloud-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0907dff8501113608"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "211125554315",
            "id": "sg-0df729f02f85dee78",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.security.aws_security_group.alb_sg",
            "module.security.aws_security_group.backend_sg"
          ]
        }
      ]
    }
  ]
}